<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.nsu.ccfit.alex.travki.Main"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_topic"
        android:textSize="40sp"
        android:textStyle="italic"
        android:textColor="@color/colorGreene1"
        android:layout_margin="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:text="@string/main_but0"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorOrange1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/but0"
                android:layout_gravity="center"
                android:layout_margin="20dp"/>

            <Button
                android:text="@string/main_but1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorGreeneLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/but1"
                android:layout_gravity="center"
                android:layout_margin="20dp"/>

            <Button
                android:text="@string/main_but2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPink1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/but2"
                android:layout_gravity="center"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
